added route to get compare to snapshot dates
